Fix: Resolve Vercel 404 and missing Android navigation screens

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -161,6 +162,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -173,10 +175,11 @@
         <div class="download-section">
             <h2 style="margin-bottom: 1rem;">Download Grátis</h2>
             <p style="margin-bottom: 2rem; opacity: 0.9;">Disponível para Android 8.0+</p>
-            <a href="https://github.com/seu-usuario/prompter/releases/latest/download/app-debug.apk" class="download-btn">
+            <a href="https://github.com/huguiniponte-cmyk/prompter/releases/latest/download/app-debug.apk"
+                class="download-btn">
                 📥 Download APK (15 MB)
             </a>
-            <a href="https://github.com/seu-usuario/prompter" class="download-btn secondary">
+            <a href="https://github.com/huguiniponte-cmyk/prompter" class="download-btn secondary">
                 💻 Ver no GitHub
             </a>
         </div>
@@ -251,4 +254,5 @@
         <p style="margin-top: 0.5rem;">Open Source • MIT License</p>
     </footer>
 </body>
+
 </html>
